--- a/src/main/resources/webapp/pc_bind_success.html
+++ b/src/main/resources/webapp/pc_bind_success.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
-    <title>通勤安全系统</title>
+    <title>通勤车安全乘坐系统</title>
 
 
     <style>
