--- a/src/main/resources/webapp/index.html
+++ b/src/main/resources/webapp/index.html
@@ -131,13 +131,19 @@ require.resourceMap({
         "main/service.js"
       ]
     },
+    "component_modules/iscroll-zoom": {
+      "url": "/static/component_modules/iscroll-zoom.js",
+      "type": "js"
+    },
     "components/page/bus/bus": {
       "url": "/static/components/page/bus/bus.js",
       "type": "js",
       "deps": [
         "component_modules/vue.js",
         "main/service.js",
-        "component_modules/layer.m.js"
+        "component_modules/layer.m.js",
+        "component_modules/iscroll-zoom.js",
+        "component_modules/director.js"
       ]
     },
     "components/page/home/home": {
@@ -153,18 +159,18 @@ require.resourceMap({
       "deps": [
         "component_modules/vue.js",
         "component_modules/director.js",
-        "components/page/home/home.js"
+        "components/page/home/home.js",
+        "main/service.js"
       ]
     }
   },
   "pkg": {}
 });</script>
-<script type="text/javascript" src="/static/js/layer.m.js"></script>
 <script type="text/javascript" src="/static/component_modules/jquery.min.js"></script>
 <script type="text/javascript" src="/static/js/mui.js"></script>
 <script type="text/javascript" src="/static/js/mui.indexedlist.js"></script>
 <script type="text/javascript">
     require(["main/main.js"]);
 </script>
-<script type="text/javascript" charset="utf-8" src="http://192.168.60.221:8132/livereload.js"></script></body>
+<script type="text/javascript" charset="utf-8" src="http://192.168.99.216:8132/livereload.js"></script></body>
 </html>
