--- a/src/main/resources/webapp/pc_bind_fail.html
+++ b/src/main/resources/webapp/pc_bind_fail.html
@@ -104,5 +104,5 @@
 </div>
 
 
-<script type="text/javascript" charset="utf-8" src="http://192.168.99.216:8132/livereload.js"></script></body>
+</body>
 </html>
