--- a/src/main/resources/webapp/index.html
+++ b/src/main/resources/webapp/index.html
@@ -96,7 +96,8 @@ require.resourceMap({
       "type": "js",
       "deps": [
         "component_modules/vue.js",
-        "navbar/navbar.js"
+        "navbar/navbar.js",
+        "main/service.js"
       ]
     },
     "components/page/whither/whither": {
