--- a/src/main/resources/webapp/index.html
+++ b/src/main/resources/webapp/index.html
@@ -97,7 +97,8 @@ require.resourceMap({
       "deps": [
         "component_modules/vue.js",
         "navbar/navbar.js",
-        "main/service.js"
+        "main/service.js",
+        "component_modules/layer.m.js"
       ]
     },
     "components/page/whither/whither": {
