去掉加载背景颜色 否则有闪动效果

--- a/src/main/resources/webapp/index.html
+++ b/src/main/resources/webapp/index.html
@@ -109,7 +109,8 @@ require.resourceMap({
         "component_modules/vue.js",
         "navbar/navbar.js",
         "main/service.js",
-        "component_modules/director.js"
+        "component_modules/director.js",
+        "component_modules/layer.m.js"
       ]
     },
     "components/page/calendar/calendar": {
@@ -118,7 +119,8 @@ require.resourceMap({
       "deps": [
         "component_modules/vue.js",
         "main/service.js",
-        "component_modules/director.js"
+        "component_modules/director.js",
+        "component_modules/layer.m.js"
       ]
     },
     "components/page/relation/relation": {
