--- a/src/main/resources/webapp/index.html
+++ b/src/main/resources/webapp/index.html
@@ -161,6 +161,10 @@ require.resourceMap({
         "component_modules/vue.js"
       ]
     },
+    "component_modules/fastclick": {
+      "url": "/static/component_modules/fastclick.js",
+      "type": "js"
+    },
     "main/main": {
       "url": "/static/components/component/main/main.js",
       "type": "js",
@@ -168,7 +172,8 @@ require.resourceMap({
         "component_modules/vue.js",
         "component_modules/director.js",
         "components/page/home/home.js",
-        "main/service.js"
+        "main/service.js",
+        "component_modules/fastclick.js"
       ]
     }
   },
