--- a/src/main/resources/webapp/index.html
+++ b/src/main/resources/webapp/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
-    <title>车辆订位系统</title>
+    <title>通勤车安全乘坐公众平台</title>
 
     <link rel="stylesheet" type="text/css" href="/static/pkg/all.css" />
 </head>
