--- a/src/main/resources/webapp/index.html
+++ b/src/main/resources/webapp/index.html
@@ -128,6 +128,16 @@ require.resourceMap({
       "type": "js",
       "deps": [
         "component_modules/vue.js",
+        "component_modules/layer.m.js",
+        "main/service.js"
+      ]
+    },
+    "components/page/relation/query/query": {
+      "url": "/static/components/page/relation/query/query.js",
+      "type": "js",
+      "deps": [
+        "component_modules/vue.js",
+        "component_modules/layer.m.js",
         "main/service.js"
       ]
     },
