--- a/src/main/resources/webapp/admin/login.html
+++ b/src/main/resources/webapp/admin/login.html
@@ -17,7 +17,6 @@
                     </span>
                 </div>
                 <br><br>
-                <form action="index.html" method="post">
                     <div class="panel">
                         <div class="panel-head"><strong>登录框</strong></div>
                         <div class="panel-body" style="padding:30px;">
@@ -34,9 +33,8 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="panel-foot text-center"><button class="button button-block bg-main text-big">立即登录后台</button></div>
+                        <div class="panel-foot text-center"><a href="index.html" class="button button-block bg-main text-big">立即登录后台</a></div>
                     </div>
-                </form>
                 <div class="text-right text-small text-gray padding-top">微信版</div>
             </div>
         </div>
