--- a/src/main/resources/webapp/admin/index.html
+++ b/src/main/resources/webapp/admin/index.html
@@ -155,6 +155,7 @@ require.resourceMap({
         "component_modules/vue.js",
         "component_modules/director.js",
         "components/page/desk/desk.js",
+        "main/service.js",
         "loading/loading.js",
         "nav/nav.js"
       ]
