--- a/src/main/resources/webapp/admin/login.html
+++ b/src/main/resources/webapp/admin/login.html
@@ -17,12 +17,13 @@
                     </span>
                 </div>
                 <br><br>
+                <form action="/admin/user/login.json" method="post">
                     <div class="panel">
                         <div class="panel-head"><strong>登录框</strong></div>
                         <div class="panel-body" style="padding:30px;">
                             <div class="form-group">
                                 <div class="field field-icon-right">
-                                    <input type="text" class="input" name="admin" placeholder="登录账号" data-validate="required:请填写账号,length#>=5:账号长度不符合要求">
+                                    <input type="text" class="input" name="email" placeholder="登录邮箱" data-validate="required:请填写邮箱,length#>=5:账号长度不符合要求">
                                     <span class="icon icon-user"></span>
                                 </div>
                             </div>
@@ -33,8 +34,9 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="panel-foot text-center"><a href="index.html" class="button button-block bg-main text-big">立即登录后台</a></div>
+                        <div class="panel-foot text-center"><button class="button button-block bg-main text-big">立即登录后台</button></div>
                     </div>
+                </form>
                 <div class="text-right text-small text-gray padding-top">微信版</div>
             </div>
         </div>
@@ -46,6 +48,10 @@
     <div class="video-overlay" style="background-color: rgba(0,0,0,0.55);"></div>
 </div>
 
+<script type="text/javascript" src="   "></script>
+<script type="text/javascript">
 
+
+</script>
 </body>
 </html>
