--- a/src/main/resources/webapp/index.html
+++ b/src/main/resources/webapp/index.html
@@ -146,6 +146,7 @@ require.resourceMap({
       "type": "js",
       "deps": [
         "component_modules/vue.js",
+        "component_modules/layer.m.js",
         "main/service.js"
       ]
     },
