--- a/src/main/resources/webapp/admin/index.html
+++ b/src/main/resources/webapp/admin/index.html
@@ -119,7 +119,8 @@ require.resourceMap({
       "url": "/admin/static/components/page/history/history.js",
       "type": "js",
       "deps": [
-        "component_modules/vue.js"
+        "component_modules/vue.js",
+        "main/service.js"
       ]
     },
     "component_modules/director": {
