前端最新修改

--- a/src/main/resources/webapp/index.html
+++ b/src/main/resources/webapp/index.html
@@ -59,6 +59,16 @@ require.resourceMap({
         "component_modules/layer.m.js"
       ]
     },
+    "components/page/order/orderdetail/orderdetail": {
+      "url": "/static/components/page/order/orderdetail/orderdetail.js",
+      "type": "js",
+      "deps": [
+        "component_modules/vue.js",
+        "navbar/navbar.js",
+        "main/service.js",
+        "component_modules/layer.m.js"
+      ]
+    },
     "component_modules/director": {
       "url": "/static/component_modules/director.js",
       "type": "js"
@@ -139,6 +149,16 @@ require.resourceMap({
         "component_modules/vue.js",
         "component_modules/layer.m.js",
         "main/service.js"
+      ]
+    },
+    "components/page/relation/relatives/relatives": {
+      "url": "/static/components/page/relation/relatives/relatives.js",
+      "type": "js",
+      "deps": [
+        "component_modules/vue.js",
+        "component_modules/layer.m.js",
+        "main/service.js",
+        "component_modules/director.js"
       ]
     },
     "components/page/company/company": {
