前端最新修改

--- a/src/main/resources/webapp/index.html
+++ b/src/main/resources/webapp/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="/static/pkg/all.css" />
 </head>
 <body>
-    <div id="app" class="wrap" >
+    <div id="app" class="wrap" style="background-color: #fff">
         <div v-component="{{currentView}}" keep-alive></div>
     </div>
 
