--- a/src/main/resources/webapp/index.html
+++ b/src/main/resources/webapp/index.html
@@ -94,12 +94,14 @@ require.resourceMap({
         "component_modules/layer.m.js"
       ]
     },
-    "components/page/service/service": {
-      "url": "/static/components/page/service/service.js",
+    "components/page/validate/validate": {
+      "url": "/static/components/page/validate/validate.js",
       "type": "js",
       "deps": [
         "component_modules/vue.js",
-        "navbar/navbar.js"
+        "navbar/navbar.js",
+        "main/service.js",
+        "component_modules/layer.m.js"
       ]
     },
     "components/page/config/config": {
