--- a/src/main/resources/webapp/index.html
+++ b/src/main/resources/webapp/index.html
@@ -150,7 +150,8 @@ require.resourceMap({
       "deps": [
         "component_modules/vue.js",
         "component_modules/layer.m.js",
-        "main/service.js"
+        "main/service.js",
+        "component_modules/director.js"
       ]
     },
     "components/page/relation/relatives/relatives": {
@@ -160,7 +161,8 @@ require.resourceMap({
         "component_modules/vue.js",
         "component_modules/layer.m.js",
         "main/service.js",
-        "component_modules/director.js"
+        "component_modules/director.js",
+        "main/check.js"
       ]
     },
     "components/page/company/company": {
