--- a/src/main/resources/webapp/admin/login.html
+++ b/src/main/resources/webapp/admin/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>通勤车安全乘坐管理平台</title>
 
-    <link rel="stylesheet" type="text/css" href="/admin/static/pkg/all.css" />
+    <link rel="stylesheet" href="/admin/static/pkg/all.css" />
 </head>
 <body class="page-login">
     <div class="wrap container">
@@ -48,8 +48,8 @@
     <div class="video-overlay" style="background-color: rgba(0,0,0,0.55);"></div>
 </div>
 
-<script type="text/javascript" src="   "></script>
-<script type="text/javascript">
+<script src="   "></script>
+<script>
 
 
 </script>
