--- a/src/main/resources/webapp/admin/index.html
+++ b/src/main/resources/webapp/admin/index.html
@@ -132,6 +132,14 @@ require.resourceMap({
         "main/service"
       ]
     },
+    "components/page/system/config": {
+      "url": "/admin/static/components/page/system/config.js",
+      "type": "js",
+      "deps": [
+        "component_modules/vue",
+        "main/service"
+      ]
+    },
     "component_modules/director": {
       "url": "/admin/static/component_modules/director.js",
       "type": "js"
