--- a/src/main/resources/webapp/index.html
+++ b/src/main/resources/webapp/index.html
@@ -5,15 +5,15 @@
     <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
     <title>通勤车安全乘坐公众平台</title>
 
-    <link rel="stylesheet" href="/static/pkg/all.css" />
+    <link rel="stylesheet" type="text/css" href="/static/pkg/all.css" />
 </head>
 <body>
     <div id="app" class="wrap" >
         <div v-component="{{currentView}}" keep-alive></div>
     </div>
 
-<script src="/static/js/mod.js"></script>
-<script>/*resourcemap*/
+<script type="text/javascript" src="/static/js/mod.js"></script>
+<script type="text/javascript">/*resourcemap*/
 require.resourceMap({
   "res": {
     "component_modules/vue": {
@@ -36,37 +36,37 @@ require.resourceMap({
       "url": "/static/components/page/bind/bind.js",
       "type": "js",
       "deps": [
-        "component_modules/vue",
-        "main/check",
-        "main/service",
-        "component_modules/layer.m"
+        "component_modules/vue.js",
+        "main/check.js",
+        "main/service.js",
+        "component_modules/layer.m.js"
       ]
     },
     "navbar/navbar": {
       "url": "/static/components/component/navbar/navbar.js",
       "type": "js",
       "deps": [
-        "component_modules/vue"
+        "component_modules/vue.js"
       ]
     },
     "components/page/order/order": {
       "url": "/static/components/page/order/order.js",
       "type": "js",
       "deps": [
-        "component_modules/vue",
-        "navbar/navbar",
-        "main/service",
-        "component_modules/layer.m"
+        "component_modules/vue.js",
+        "navbar/navbar.js",
+        "main/service.js",
+        "component_modules/layer.m.js"
       ]
     },
     "components/page/order/orderdetail/orderdetail": {
       "url": "/static/components/page/order/orderdetail/orderdetail.js",
       "type": "js",
       "deps": [
-        "component_modules/vue",
-        "navbar/navbar",
-        "main/service",
-        "component_modules/layer.m"
+        "component_modules/vue.js",
+        "navbar/navbar.js",
+        "main/service.js",
+        "component_modules/layer.m.js"
       ]
     },
     "component_modules/director": {
@@ -77,101 +77,101 @@ require.resourceMap({
       "url": "/static/components/page/search/search.js",
       "type": "js",
       "deps": [
-        "component_modules/vue",
-        "navbar/navbar",
-        "component_modules/director",
-        "component_modules/layer.m",
-        "main/service"
+        "component_modules/vue.js",
+        "navbar/navbar.js",
+        "component_modules/director.js",
+        "component_modules/layer.m.js",
+        "main/service.js"
       ]
     },
     "components/page/search/result/result": {
       "url": "/static/components/page/search/result/result.js",
       "type": "js",
       "deps": [
-        "component_modules/vue",
-        "main/service",
-        "component_modules/director",
-        "component_modules/layer.m"
+        "component_modules/vue.js",
+        "main/service.js",
+        "component_modules/director.js",
+        "component_modules/layer.m.js"
       ]
     },
     "components/page/validate/validate": {
       "url": "/static/components/page/validate/validate.js",
       "type": "js",
       "deps": [
-        "component_modules/vue",
-        "navbar/navbar",
-        "main/service",
-        "component_modules/layer.m"
+        "component_modules/vue.js",
+        "navbar/navbar.js",
+        "main/service.js",
+        "component_modules/layer.m.js"
       ]
     },
     "components/page/config/config": {
       "url": "/static/components/page/config/config.js",
       "type": "js",
       "deps": [
-        "component_modules/vue",
-        "navbar/navbar",
-        "main/service",
-        "component_modules/layer.m"
+        "component_modules/vue.js",
+        "navbar/navbar.js",
+        "main/service.js",
+        "component_modules/layer.m.js"
       ]
     },
     "components/page/whither/whither": {
       "url": "/static/components/page/whither/whither.js",
       "type": "js",
       "deps": [
-        "component_modules/vue",
-        "navbar/navbar",
-        "main/service",
-        "component_modules/director",
-        "component_modules/layer.m"
+        "component_modules/vue.js",
+        "navbar/navbar.js",
+        "main/service.js",
+        "component_modules/director.js",
+        "component_modules/layer.m.js"
       ]
     },
     "components/page/calendar/calendar": {
       "url": "/static/components/page/calendar/calendar.js",
       "type": "js",
       "deps": [
-        "component_modules/vue",
-        "main/service",
-        "component_modules/director",
-        "component_modules/layer.m"
+        "component_modules/vue.js",
+        "main/service.js",
+        "component_modules/director.js",
+        "component_modules/layer.m.js"
       ]
     },
     "components/page/relation/relation": {
       "url": "/static/components/page/relation/relation.js",
       "type": "js",
       "deps": [
-        "component_modules/vue",
-        "component_modules/layer.m",
-        "main/service"
+        "component_modules/vue.js",
+        "component_modules/layer.m.js",
+        "main/service.js"
       ]
     },
     "components/page/relation/query/query": {
       "url": "/static/components/page/relation/query/query.js",
       "type": "js",
       "deps": [
-        "component_modules/vue",
-        "component_modules/layer.m",
-        "main/service",
-        "component_modules/director"
+        "component_modules/vue.js",
+        "component_modules/layer.m.js",
+        "main/service.js",
+        "component_modules/director.js"
       ]
     },
     "components/page/relation/relatives/relatives": {
       "url": "/static/components/page/relation/relatives/relatives.js",
       "type": "js",
       "deps": [
-        "component_modules/vue",
-        "component_modules/layer.m",
-        "main/service",
-        "component_modules/director",
-        "main/check"
+        "component_modules/vue.js",
+        "component_modules/layer.m.js",
+        "main/service.js",
+        "component_modules/director.js",
+        "main/check.js"
       ]
     },
     "components/page/company/company": {
       "url": "/static/components/page/company/company.js",
       "type": "js",
       "deps": [
-        "component_modules/vue",
-        "component_modules/layer.m",
-        "main/service"
+        "component_modules/vue.js",
+        "component_modules/layer.m.js",
+        "main/service.js"
       ]
     },
     "component_modules/iscroll-zoom": {
@@ -182,18 +182,18 @@ require.resourceMap({
       "url": "/static/components/page/bus/bus.js",
       "type": "js",
       "deps": [
-        "component_modules/vue",
-        "main/service",
-        "component_modules/layer.m",
-        "component_modules/iscroll-zoom",
-        "component_modules/director"
+        "component_modules/vue.js",
+        "main/service.js",
+        "component_modules/layer.m.js",
+        "component_modules/iscroll-zoom.js",
+        "component_modules/director.js"
       ]
     },
     "components/page/home/home": {
       "url": "/static/components/page/home/home.js",
       "type": "js",
       "deps": [
-        "component_modules/vue"
+        "component_modules/vue.js"
       ]
     },
     "component_modules/fastclick": {
@@ -204,19 +204,19 @@ require.resourceMap({
       "url": "/static/components/component/main/main.js",
       "type": "js",
       "deps": [
-        "component_modules/vue",
-        "component_modules/director",
-        "components/page/home/home",
-        "main/service",
-        "component_modules/fastclick"
+        "component_modules/vue.js",
+        "component_modules/director.js",
+        "components/page/home/home.js",
+        "main/service.js",
+        "component_modules/fastclick.js"
       ]
     }
   },
   "pkg": {}
 });</script>
-<script src="/static/component_modules/jquery.min.js"></script>
-<script src="/static/js/mui.js"></script>
-<script src="/static/js/mui.indexedlist.js"></script>
+<script type="text/javascript" src="/static/component_modules/jquery.min.js"></script>
+<script type="text/javascript" src="/static/js/mui.js"></script>
+<script type="text/javascript" src="/static/js/mui.indexedlist.js"></script>
 <script type="text/javascript">
     require(["main/main.js"]);
 </script>
