--- a/src/main/resources/webapp/admin/index.html
+++ b/src/main/resources/webapp/admin/index.html
@@ -79,7 +79,8 @@ require.resourceMap({
       "deps": [
         "component_modules/vue.js",
         "main/service.js",
-        "main/check.js"
+        "main/check.js",
+        "pager/pager.js"
       ]
     },
     "components/page/companyOrder/ticketsStats/ticketsStats": {
@@ -158,7 +159,8 @@ require.resourceMap({
       "type": "js",
       "deps": [
         "component_modules/vue.js",
-        "main/service.js"
+        "main/service.js",
+        "pager/pager.js"
       ]
     },
     "components/page/system/config": {
@@ -213,6 +215,7 @@ require.resourceMap({
 <script type="text/javascript" src="/admin/static/component_modules/jquery.min.js"></script>
 <script type="text/javascript" src="/admin/static/js/respond.js"></script>
 <script type="text/javascript" src="/admin/static/js/lrz.pc.min.js"></script>
+<script type="text/javascript" src="/admin/static/js/laydate/laydate.js"></script>
 <script type="text/javascript">
     var CONFIG = {
         OFFTIME:"16:00"
