--- a/src/main/resources/webapp/pc_bind_fail.html
+++ b/src/main/resources/webapp/pc_bind_fail.html
@@ -95,9 +95,9 @@
 <div class="wrap">
     <div class="logo">
         <h1>
-            绑定失败
+            绑定成功
         </h1>
-        <p>对不起，您的邮箱绑定验证失败，请重试。</p>
+        <p>您已可以在微信中使用订位服务，请勿重复绑定。</p>
 
     </div>
 
