--- a/src/main/resources/webapp/pc_bind_success.html
+++ b/src/main/resources/webapp/pc_bind_success.html
@@ -112,7 +112,7 @@
         <h1>
             绑定成功
         </h1>
-        <p>您已可以在微信中使用订位服务。</p>
+        <p>您已可以在微信中使用订位服务，请勿重复绑定。</p>
 
     </div>
 
