--- a/src/main/resources/webapp/index.html
+++ b/src/main/resources/webapp/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
     <title>通勤车安全乘坐公众平台</title>
 
-    <link rel="stylesheet" type="text/css" href="/static/pkg/all.css?20141209" />
+    <link rel="stylesheet" type="text/css" href="/static/pkg/all.css" />
 </head>
 <body>
     <div id="app" class="wrap" >
@@ -65,6 +65,15 @@ require.resourceMap({
       "deps": [
         "component_modules/vue.js",
         "navbar/navbar.js",
+        "main/service.js",
+        "component_modules/layer.m.js"
+      ]
+    },
+    "components/page/history/history": {
+      "url": "/static/components/page/history/history.js",
+      "type": "js",
+      "deps": [
+        "component_modules/vue.js",
         "main/service.js",
         "component_modules/layer.m.js"
       ]
@@ -217,6 +226,7 @@ require.resourceMap({
 <script type="text/javascript" src="/static/component_modules/jquery.min.js"></script>
 <script type="text/javascript" src="/static/js/mui.js"></script>
 <script type="text/javascript" src="/static/js/mui.indexedlist.js"></script>
+<script type="text/javascript" src="/static/js/mui.picker.min.js"></script>
 <script type="text/javascript">
     require(["main/main.js"]);
 </script>
