--- a/src/main/resources/webapp/order/admin/login.html
+++ b/src/main/resources/webapp/order/admin/login.html
@@ -38,6 +38,7 @@
                                </div>
                            </div>
                        </div>
+                       <input type="hidden" name="redirect" value="/order/admin/index.html">
                        <div class="form-group">
                                <input type="submit" class="btn btn-primary btn-block"   value="立即登录后台">
                        </div>
