--- a/src/main/resources/webapp/order/admin/index.html
+++ b/src/main/resources/webapp/order/admin/index.html
@@ -7,9 +7,8 @@
     <style>
 
     </style>
-
-
     <link rel="stylesheet" href="/order/admin/static/pkg/all.css" />
+    <link rel="stylesheet" href="//cdn.bootcss.com/bootstrap/3.3.5/css/bootstrap.min.css" />
 </head>
 <body id="app" >
 <header>
