--- a/src/main/resources/webapp/order/admin/login.html
+++ b/src/main/resources/webapp/order/admin/login.html
@@ -4,7 +4,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <meta name="renderer" content="webkit">    <title>订餐系统</title>
+    <meta name="renderer" content="webkit" />    <title>订餐系统</title>
     <!-- 新 Bootstrap 核心 CSS 文件 -->
 
     <link rel="stylesheet" href="/order/admin/static/pkg/all.css" />
