--- a/src/main/resources/webapp/order/admin/index.html
+++ b/src/main/resources/webapp/order/admin/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="renderer" content="webkit">    <title>订餐系统</title>
+    <meta name="renderer" content="webkit" />    <title>订餐系统</title>
     <style>
 
     </style>
