--- a/src/main/resources/webapp/order/admin/static/wx/index.html
+++ b/src/main/resources/webapp/order/admin/static/wx/index.html
@@ -123,7 +123,7 @@
 
 	function getQueryString(name) {
 		var reg = new RegExp("(^|&)" + name + "=([^&]*)(&|$)", "i");
-		if(window.top.location.hash.split("?").length==0){
+		if(window.top.location.hash.split("?").length<=1){
 			return null;
 		}
 		var r = window.top.location.hash.split("?")[1].match(reg);;
