--- a/src/main/resources/webapp/order/admin/index.html
+++ b/src/main/resources/webapp/order/admin/index.html
@@ -9,7 +9,7 @@
     </style>
 
 
-    <link rel="stylesheet" href="/order/admin/static/pkg/all.css" />
+    <link rel="stylesheet" href="/order/admin/static/pkg/all_3f4d2b6.css" />
 </head>
 <body id="app" >
 <header>
@@ -209,6 +209,36 @@ require.resourceMap({
       ],
       "pkg": "p1"
     },
+    "components/page/goods/goods": {
+      "url": "/order/admin/static/components/page/goods/goods.js",
+      "type": "js",
+      "deps": [
+        "component_modules/vue",
+        "main/service",
+        "form/form"
+      ],
+      "pkg": "p1"
+    },
+    "components/page/gOrder/order": {
+      "url": "/order/admin/static/components/page/gOrder/order.js",
+      "type": "js",
+      "deps": [
+        "component_modules/vue",
+        "main/service",
+        "form/form"
+      ],
+      "pkg": "p1"
+    },
+    "components/page/gOrder/detail/detail": {
+      "url": "/order/admin/static/components/page/gOrder/detail/detail.js",
+      "type": "js",
+      "deps": [
+        "component_modules/vue",
+        "main/service",
+        "form/form"
+      ],
+      "pkg": "p1"
+    },
     "components/page/list/list": {
       "url": "/order/admin/static/components/page/list/list.js",
       "type": "js",
@@ -225,7 +255,7 @@ require.resourceMap({
       "type": "js"
     },
     "p1": {
-      "url": "/order/admin/static/pkg/app_e548a20.js",
+      "url": "/order/admin/static/pkg/app_858b473.js",
       "type": "js"
     }
   }
